[gd_scene load_steps=8 format=3 uid="uid://bbm18fuplaygr"]

[ext_resource type="Script" uid="uid://ctlhqavaisjyi" path="res://GUI/PauseMenu/pause_menu.gd" id="1_2mjep"]
[ext_resource type="Texture2D" uid="uid://btd6qdeeb4j4m" path="res://Items/Sprites/items.png" id="2_mqpij"]
[ext_resource type="PackedScene" uid="uid://ny78ah3pemvi" path="res://GUI/PauseMenu/Inventory/inventory_slot.tscn" id="3_5jsve"]
[ext_resource type="Script" uid="uid://ds4sodd7sy16o" path="res://GUI/PauseMenu/Inventory/Scripts/inventory_ui.gd" id="3_cqli2"]
[ext_resource type="Resource" uid="uid://din0bypbjigj3" path="res://GUI/PauseMenu/Inventory/player_inventory.tres" id="4_wvt6b"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5jsve"]
atlas = ExtResource("2_mqpij")
region = Rect2(96, 0, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_cqli2"]
content_margin_left = 10.0
content_margin_top = 10.0
content_margin_right = 10.0
content_margin_bottom = 10.0
texture = SubResource("AtlasTexture_5jsve")
texture_margin_left = 14.0
texture_margin_top = 14.0
texture_margin_right = 14.0
texture_margin_bottom = 14.0

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_2mjep")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="Control"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14117648, 0.14117648, 0.14117648, 0.78431374)

[node name="Label" type="Label" parent="Control"]
modulate = Color(1, 1, 1, 0.78431374)
layout_mode = 0
offset_left = 16.0
offset_top = 24.0
offset_right = 83.0
offset_bottom = 47.0
text = "[paused]"
horizontal_alignment = 1

[node name="ItemDescription" type="Label" parent="Control"]
modulate = Color(1, 1, 1, 0.78431374)
layout_mode = 0
offset_left = 24.0
offset_top = 160.0
offset_right = 208.0
offset_bottom = 216.0
theme_override_font_sizes/font_size = 10
horizontal_alignment = 1
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -224.0
offset_top = 89.0
offset_right = -70.0
offset_bottom = 120.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button_Save" type="Button" parent="Control/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Save"

[node name="Button_Load" type="Button" parent="Control/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(75, 0)
layout_mode = 2
text = "Load"

[node name="PanelContainer" type="PanelContainer" parent="Control"]
layout_mode = 0
offset_left = 16.0
offset_top = 64.0
offset_right = 212.0
offset_bottom = 152.0
theme_override_styles/panel = SubResource("StyleBoxTexture_cqli2")

[node name="GridContainer" type="GridContainer" parent="Control/PanelContainer"]
layout_mode = 2
columns = 5
script = ExtResource("3_cqli2")
data = ExtResource("4_wvt6b")

[node name="InventorySlot" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_5jsve")]
layout_mode = 2

[node name="InventorySlot2" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_5jsve")]
layout_mode = 2

[node name="InventorySlot3" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_5jsve")]
layout_mode = 2

[node name="InventorySlot4" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_5jsve")]
layout_mode = 2

[node name="InventorySlot5" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_5jsve")]
layout_mode = 2

[node name="InventorySlot6" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_5jsve")]
layout_mode = 2

[node name="InventorySlot7" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_5jsve")]
layout_mode = 2

[node name="InventorySlot8" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_5jsve")]
layout_mode = 2

[node name="InventorySlot9" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_5jsve")]
layout_mode = 2

[node name="InventorySlot10" parent="Control/PanelContainer/GridContainer" instance=ExtResource("3_5jsve")]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
max_polyphony = 4

[connection signal="pressed" from="Control/HBoxContainer/Button_Save" to="." method="_on_button_save_pressed"]
[connection signal="pressed" from="Control/HBoxContainer/Button_Load" to="." method="_on_button_load_pressed"]
